# floccus_cli

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: rust.yml
floccus-cli/: Cargo.toml
floccus-cli/src/: main.rs
floccus-cli/src/cli/: cli_args.rs  config.rs  mod.rs
floccus-cli/src/git/: git_command.rs  mod.rs
floccus-xbel/: Cargo.toml
floccus-xbel/src/: lib.rs  xbel_format.rs
ressources/: bookmarks_bank_v1.xbel
src/: main.rs
src/cli/: cli.rs  cli_args.rs  config.rs  mod.rs
src/git/: git_command.rs  mod.rs
src/xbel/: mod.rs  xbel_format.rs
