[package]
name = "floccus_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
git2 = "0.19"
quick-xml = {  version = "0.36", features = ["serde", "serialize"] }
directories = "5.0"
thiserror = "2.0"
toml = "0.8.19"
toml_edit = "0.22.22"
