[workspace]
members = [
    "floccus-xbel",
    "floccus-cli",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = "fat"

[workspace.dependencies]
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.214", features = ["derive"] }
git2 = "0.19.0"
url = { version = "2.5.3", features = ["serde"] }
quick-xml = {  version = "0.37.0", features = ["serde", "serialize"] }
directories = "5.0.1"
thiserror = "2.0.0"
anyhow = "1.0.93"
toml = "0.8.19"
toml_edit = "0.22.22"
tempfile = "3.13.0"
regex = "1.11.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tracing-test = "0.2.5"
